--- a/app/index.css
+++ b/app/index.css
@@ -6,173 +6,119 @@
 }
 
 body {
-   font-family: 'Helvetica Neue', 'Helvetica Neue Light', sans-serif;
-   color: gray;
-   letter-spacing: 1px;
-   font-weight: 300;
-   height: 100%;
+   font-family: 'open', sans-serif;
    margin: 0;
-   padding: 0;
-   overflow-x:hidden;
-   font-size: 14px;
+    padding: 0;
+    width: 100%;
+    height: 100%;
 }
 
-/* Patterns */
-
-h2 {
-	font-size: 16px;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	color: #ED527F;
-	font-weight: 500;
+#app {
+    max-width: 840px;
+    margin: 0 auto;
 }
 
-h6 {
-	margin: 0;
-	text-transform: uppercase;
-	font-weight: 500;
-	font-size: 14px;
+.reset-margin {
+    margin: 0
 }
-
-a {
-	color: #ED527F;
-}
-
-hr {
-	border: 0;
-	height: 0;
-	border-top: 1px solid rgba(0, 0, 0, 0.1);
-	border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-}
-
 
 /* Header */
 
-.bcg {
-    background: no-repeat center center;
-    background-size: cover;
-    width: 100vw;
+.title {
+    text-align: left;
+    padding-top: 200px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    max-width: 840px;
     height: 100vh;
+}
+
+section {
+    padding: 0;
+    /* margin: 0; */
+    /* display: -webkit-box; */
+    /* display: -webkit-flex; */
+    display: flex;
     margin: 0 auto;
-    display: table-cell;
-    vertical-align: middle;
-    background-image: url('/app/img/bg.jpg');
+    width: 100%;
+    /* max-width: 100%; */
+    overflow: visible;
 }
 
-.wrapper {
-    /* visibility:hidden; */
-    margin: 0 auto;
-    padding-bottom:100px;
-    align-content: center;
+section h1 {
+    text-align: left;
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 76px;
+    color: #202020;
+    margin: 0;
 }
 
-.header-h1 {
-    font-size: 60px;
-    font-weight:700;
-    color:white;
-    text-align:center;
-    margin-bottom: 15px;
+
+h1 span {
+    color: hotpink
 }
 
-.header-h2 {
-    background-color: #ED527F;
-    color: white;
-    width: 340px;
-    line-height: 30px;
-    border-radius: 20px;
-    letter-spacing: 3px;
-    font-weight: 300;
-    font-size:14px;
+/* Content */
+
+.about-me {
+    height: 500px;
+}
+
+.my-image {
+    background-size: cover;
+    margin-right: 70px;
+    height: 220px;
+    float: left;
+    border: 3px solid black;
+}
+
+.btn {
+    cursor: pointer;
+    background-color: black;
+    width: 200px;
     text-align: center;
-    margin: 0 auto;
-    text-transform: uppercase
-}
-
-.header-p {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 70px;
-    text-align: center;
+    font-size: 14px;
+    /* margin-bottom: 60px; */
     color: white;
-    letter-spacing: 2px;
-    font-size:16px;
-    /* display:none */
+    /* float: left; */
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    -webkit-appearance: none;
 }
 
-.scroll-down {
-    /* display:none; */
-    width:50px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 30px;
-    margin:0 auto;
-}
-
-/* Session */
+/* Topics */
 
 .topic {
-	padding: 70px;
-	margin: 0;
+    margin: 0;
 }
 
-.title h3 {
-	font-weight: 100;
-	margin: 0;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	font-size: 18px;
+.topic h3 {
+    font-weight: 100;
+    margin: 0;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 18px;
 }
 
-.bottom-line {
-	background: #ED527F;
-	margin-top: 5px;
-	height: 2px;
-	width: 60px;
+/* Expert In */
+
+.expert-areas {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    display: flex;
+    text-align: center;
 }
 
-/* About me */
-
-.about-area {
-	position: relative;
-	width: 100%;
+.expert-area {
+    padding: 100px 40px;
 }
 
-.about-img {
-	background-image: url(./img/me.jpg);
-	background-size: cover;
-	margin: 0 70px 100px;
-	width: 220px;
-	height: 220px;
-	border-radius: 50%;
-	float: left;
-}
-
-.button {
-	background-color: #ED527F;
-	text-align: center;
-	font-size: 14px;
-	margin: 53px 0 60px 0;
-	color: white;
-	float: left;
-	padding: 10px;
-	border-radius: 20px;
-	-webkit-appearance: none;
-	cursor: pointer;
-}
-
-.button-pink {
-	background-color: #ED527F;
-	width: 200px;
-}
-
-.button-gray {
-	background-color: gray;
-	width: 150px;
-	margin-left: 30px;
-}
-
-.about-area p {
-    margin-right: 50px;
+.expert-icon {
+    height: 48px;
+    margin: 0;
 }
